--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "hhxsv5/laravel-s": "~3.7.0",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "liquid/liquid": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
